--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "dependencies": {
     "napi-thread-safe-callback": "0.0.6",
-    "noble": "^1.9.1",
+    "@abandonware/noble": "^1.9.2-14",
     "node-addon-api": "1.6.2",
     "prebuild-install": "^5.0.0",
     "bindings": "~1.3.0"
   },
   "scripts": {
-    "install": "prebuild-install --force || node-gyp rebuild",
+    "install": "node-gyp configure --msvs_version=2017 || prebuild-install --force || node-gyp rebuild",
     "ci": "node --napi-modules ./test/ci_test.js",
     "test:bindings": "node --napi-modules ./test/test_binding.js",
     "test:battery": "node --napi-modules ./test/test_battery.js",
